--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,11 @@
 service: sendsqs
 provider:
   name: aws
+  runtime: nodejs8.10
   stage: dev
   region: ap-northeast-1
+  profile: ${opt:profile}
+  deploymentBucket: serverless-lambda-deploys
 
 functions:
   send:
